fixes unreadable profile-subtitle link color (closes #784)

--- a/app/toCanon/Splash.css
+++ b/app/toCanon/Splash.css
@@ -59,6 +59,9 @@
   & .profile-subtitle {
     font-size: 18px;
     line-height: 1.2;
+    & a {
+      color: white;
+    }
   }
   & .SearchButton {
     position: relative;
